[package]
name = "package_version_details"
version = "0.1.0"
edition = "2024"

[dependencies]
sui-graphql-client = "0.0.5"
cynic = { version = "3.0", features = ["http-reqwest"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4.41"

[build-dependencies]
cynic-codegen = "3.0"
